# rail-transit-simulation-system

./: .cursorrules  .gitignore  CLAUDE.md  README.md
backend/: .gitignore  CLAUDE.md  README.md  pyproject.toml  pytest.ini
backend/examples/: run_simulation.py
backend/scripts/: debug_multi_train.py
backend/sim_engine/: __init__.py  __main__.py  app.py  orchestrator.py
backend/sim_engine/api/: config.py  health.py  params.py  scenarios.py  simulation.py
backend/sim_engine/config/: pid.yaml  power.yaml  signal.yaml  simulation.yaml  timetable.yaml  timetable_legacy.yaml  timetable_offpeak.yaml  track.yaml  vehicle.yaml
backend/sim_engine/core/: __init__.py  clock.py  config.py
backend/sim_engine/data/: __init__.py  recorder.py  snapshot.py
backend/sim_engine/power/: __init__.py  load_flow.py  regeneration.py  static_power.py  (+1 more)
backend/tests/: conftest.py  test_api.py  test_ato.py  test_atp.py  test_atp_leading_ma.py  test_ats.py  test_bidirectional_multi_train.py  test_continuous_dispatch_integration.py  test_core.py  test_data.py  test_external.py  test_fleet_scheduler.py  test_manual_drive.py  test_multi_train_step.py  test_occupancy.py  test_orchestrator.py  test_orchestrator_signaling.py  test_pid_controller.py  test_power.py  test_sig07_following.py  test_signal_models.py  test_signaling.py  test_simulation_manager_multi_train.py  test_simulation_multi_train_config.py  test_switch.py  test_timetable_loader.py  test_timetable_v2_loader.py  test_track.py  test_train_following.py  test_train_run_init.py  test_turnback.py  test_vehicle.py  test_ws.py
(+240 files in other folders)
